--- a/.ado/pipelines/config/variables-values-e2e.yaml
+++ b/.ado/pipelines/config/variables-values-e2e.yaml
@@ -11,10 +11,10 @@ variables:
 # Check which regions are valid. There is a list in /src/infra/README.md
 # If you are planning to run Chaos Studio experiments, make sure the first region in the list does support Azure Chaos Studio. Not all regions do yet
 - name: 'stampLocations'
-  value: '["uksouth"]'
+  value: '["uksouth","eastus2"]'
 
 - name: 'stampLocationsGrafana'
-  value: '["eastus", "brazilsouth"]' # Check which regions are valid. There is a list in /src/infra/README.md
+  value: '["uksouth","eastus2"]' # Check which regions are valid. There is a list in /src/infra/README.md
 
 # Terraform state variables
 - name:  'terraformResourceGroup'
